--- a/src/openboardview/CMakeLists.txt
+++ b/src/openboardview/CMakeLists.txt
@@ -69,6 +69,7 @@ set(SOURCES
 	FileFormats/CADFile.cpp
 	FileFormats/CSTFile.cpp
 	FileFormats/FZFile.cpp
+	FileFormats/GenCADFile.cpp
 	NetList.cpp
 	PartList.cpp
 	Renderers/Renderers.cpp
@@ -83,6 +84,7 @@ set(SOURCES
 	GUI/Image.cpp
 	GUI/Preferences/BackgroundImage.cpp
 	GUI/Preferences/Keyboard.cpp
+	../mpc/mpc.c
 	main_opengl.cpp
 )
 
