--- a/src/openboardview/CMakeLists.txt
+++ b/src/openboardview/CMakeLists.txt
@@ -90,6 +90,7 @@ set(SOURCES
 	GUI/Preferences/BackgroundImage.cpp
 	GUI/Preferences/Keyboard.cpp
 	../mpc/mpc.c
+        ../mpc/mpc.h
 	main_opengl.cpp
 )
 
